[package]
name = "complexipy"
version = "2.0.0"
edition = "2021"
authors = ["Robin Quintero <rohaquinlop301@gmail.com>"]
license = "MIT"
description = "An extremely fast Python library to calculate the cognitive complexity of Python files, written in Rust."
readme = "README.md"
homepage = "https://github.com/rohaquinlop/complexipy"
documentation = "https://rohaquinlop.github.io/complexipy/"
repository = "https://github.com/rohaquinlop/complexipy"
exclude = ["/tests", ".github", ".gitignore", "targets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "complexipy"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.0"
ignore = "0.4.22"
indicatif = "0.17.8"
pyo3 = "0.19.0"
rayon = "1.8.1"
regex = "1.11.1"
ruff-python-parser = { git = "https://github.com/astral-sh/ruff", tag = "v0.4.4", package = "ruff_python_parser" }
ruff-python-ast = { git = "https://github.com/astral-sh/ruff", tag = "v0.4.4", package = "ruff_python_ast" }
tempfile = "3.10.0"
