[package]
name = "complexipy"
version = "6.0.1"
edition = "2024"
authors = ["Robin Quintero <rohaquinlop301@gmail.com>"]
license = "MIT"
description = "An extremely fast Python library to calculate the cognitive complexity of Python files, written in Rust."
readme = "README.md"
homepage = "https://github.com/rohaquinlop/complexipy"
documentation = "https://rohaquinlop.github.io/complexipy/"
repository = "https://github.com/rohaquinlop/complexipy"
exclude = [
    "/tests",
    ".github",
    ".gitignore",
    "targets",
    "web",
    "complexipy-vscode",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "complexipy"
# Enable cdylib for Python and wasm32 targets
crate-type = ["cdylib"]

[features]
default = ["python"]
python = [
    "serde",
    "pyo3",
    "csv",
    "ignore",
    "indicatif",
    "regex",
    "ruff_python_ast",
    "ruff_python_parser",
    "tempfile",
    "globset"
]
wasm = [
    "wasm-bindgen",
    "js-sys",
    "serde",
    "serde-wasm-bindgen",
    "console_error_panic_hook",
    "web-sys",
]

[dependencies]
csv = { version = "1.3.0", optional = true }
globset = { version = "0.4", optional = true }
ignore = { version = "0.4.22", optional = true }
indicatif = { version = "0.17.8", optional = true }
regex = { version = "1.11.1", optional = true }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.12.9", package = "ruff_python_parser", optional = true }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.12.9", package = "ruff_python_ast", optional = true }
tempfile = { version = "3.10.0", optional = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
pyo3 = { version = "0.29", optional = true }

# Optional dependencies for WASM
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
wax = "0.7.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
