[package]
name = "complexipy-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"

# Import the same dependencies as the main crate to ensure compatibility
ruff-python-parser = { git = "https://github.com/astral-sh/ruff", tag = "v0.4.4", package = "ruff_python_parser" }
ruff-python-ast = { git = "https://github.com/astral-sh/ruff", tag = "v0.4.4", package = "ruff_python_ast" }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
